[package]
name = "github-nginx-hooker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
ipnetwork = "0.20.0"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.143", features = ["derive"] }
thiserror = "1.0.32"
toml = "0.5.9"
